--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -1,3 +1,5 @@
+@import 'colors';
+
 *,
 *::before,
 *::after {
@@ -38,7 +40,7 @@ a
 
 body {
 	font-family: 'Epilogue', sans-serif;
-	background-color: #fff;
+	background-color: $white;
 	min-height: 100vh;
 	scroll-behavior: smooth;
 	text-rendering: optimizeSpeed;
